# rgbd_ground_truth_generator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake_modules/: FindAssimp.cmake  FindEigen.cmake  FindGLEW.cmake  FindGLFW.cmake  FindOpenCVHighGuiImgProc.cmake
doc/: Doxyfile
src/model_renderer/: assimp_model_loader.cpp  assimp_model_loader.hpp  cg_model.hpp  gl_model.cpp  gl_model.hpp  model_loader.hpp  model_renderer.cpp  model_renderer.h  model_renderer.hpp  model_renderer_cwrapper.cpp  model_skeleton.cpp  model_skeleton.hpp
src/model_renderer/shaders/: default_frag_shader.fs  default_vert_shader.vs
src/wrappers/matlab/: model_renderer_delete.c  model_renderer_getboneidx.c  model_renderer_getbonename.c  model_renderer_getbonesnum.c  model_renderer_new.c  model_renderer_render.c  model_renderer_setpose.c
test/matlab/: test.m
